--- a/ecommerce/requirements.txt
+++ b/ecommerce/requirements.txt
@@ -3,22 +3,33 @@ asgiref==3.11.0
 async-timeout==5.0.1
 billiard==4.2.4
 celery==5.6.2
+certifi==2026.1.4
+charset-normalizer==3.4.4
 click==8.3.1
 click-didyoumean==0.3.1
 click-plugins==1.1.1.2
 click-repl==0.3.0
+coreapi==2.3.3
+coreschema==0.0.4
 cron_descriptor==2.0.6
 Django==5.2.10
 django-celery-beat==2.8.1
 django-environ==0.12.0
 django-filter==25.2
+django-rest-swagger==2.2.0
 django-timezone-field==7.2.1
+django_celery_results==2.6.0
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 drf-yasg==1.21.14
 exceptiongroup==1.3.1
+idna==3.11
 inflection==0.5.1
+itypes==1.2.0
+Jinja2==3.1.6
 kombu==5.6.2
+MarkupSafe==3.0.3
+openapi-codec==1.3.2
 packaging==26.0
 prompt_toolkit==3.0.52
 psycopg2==2.9.11
@@ -27,12 +38,15 @@ python-crontab==3.3.0
 python-dateutil==2.9.0.post0
 pytz==2025.2
 PyYAML==6.0.3
-redis==7.1.0
+redis==6.4.0
+requests==2.32.5
+simplejson==3.20.2
 six==1.17.0
 sqlparse==0.5.5
 typing_extensions==4.15.0
 tzdata==2025.3
 tzlocal==5.3.1
 uritemplate==4.2.0
+urllib3==2.6.3
 vine==5.1.0
 wcwidth==0.5.2
