--- a/ecommerce/ecommerce.igwilo.conf
+++ b/ecommerce/ecommerce.igwilo.conf
@@ -17,9 +17,9 @@ server {
     ssl_certificate           /etc/letsencrypt/live/igwilo.com/fullchain.pem;
     ssl_certificate_key       /etc/letsencrypt/live/igwilo.com/privkey.pem; # chmod 0640
     ssl_session_cache  builtin:1000  shared:SSL:10m;
-    ssl_protocols  TLSv1 TLSv1.1 TLSv1.2;
-    ssl_ciphers HIGH:!aNULL:!eNULL:!EXPORT:!CAMELLIA:!DES:!MD5:!PSK:!RC4;
-    ssl_prefer_server_ciphers on;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+    ssl_prefer_server_ciphers off;
 
     access_log            /var/log/nginx/ecommerce_igwilo.access.log;
 
