--- a/ecommerce/.github/workflows/cicd.yml
+++ b/ecommerce/.github/workflows/cicd.yml
@@ -93,7 +93,7 @@ jobs:
             CELERY_BROKER_URL=redis://redis:6380/0
             CELERY_RESULT_BACKEND=redis://redis:6380/0
             EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
-            EMAIL_HOST='smtp.gmail.com'
+            EMAIL_HOST=${{ secrets.EMAIL_HOST }}
             EMAIL_PORT=587
             EMAIL_USE_TLS=True
             EMAIL_HOST_USER=${{ secrets.EMAIL_HOST_USER }}
