--- a/ecommerce/docker-compose.yaml
+++ b/ecommerce/docker-compose.yaml
@@ -22,13 +22,16 @@ services:
       redis:
         condition: service_started
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:${DJANGO_PORT:-8000}/ || exit 1"]
+      test:
+        [
+          "CMD-SHELL",
+          "curl -f http://localhost:${DJANGO_PORT:-8000}/ || exit 1",
+        ]
       interval: 30s
       timeout: 5s
       retries: 3
       start_period: 30s
     volumes:
-      - .:/app
       - ./staticfiles:/app/staticfiles
       - ./media:/app/media
 
@@ -51,8 +54,6 @@ services:
     depends_on:
       - db
       - redis
-    volumes:
-      - .:/app
 
   db:
     image: postgres:16-alpine
