--- a/ecommerce/env.example
+++ b/ecommerce/env.example
@@ -1,27 +1,37 @@
-DJANGO_SECRET_KEY=
-DEBUG=
-ALLOWED_HOSTS=
+# Django Configuration
+DJANGO_SECRET_KEY=your_secret_key_here
+DEBUG=False
+SSH_HOST=your_server_hostname
+ALLOWED_HOSTS=example.com,www.example.com
+DJANGO_PORT=8010
+REDIS_PORT=6380
 
-DB_USER=
-DB_PASSWORD=
-DB_NAME=
-DB_HOST=
-DB_PORT=
+# Database Configuration
+POSTGRES_USER=your_db_user
+POSTGRES_PASSWORD=your_db_password
+POSTGRES_DB=ecommerce_db
+POSTGRES_HOST=db
+POSTGRES_PORT=5434
 
-CORS_ALLOW_ALL_ORIGINS=
-CORS_ALLOWED_ORIGINS=
+# CORS Configuration
+CORS_ALLOW_ALL_ORIGINS=False
+CORS_ALLOWED_ORIGINS=https://example.com,https://www.example.com
 
-CHAPA_SECRET_KEY=
+# Payment Configuration
+CHAPA_SECRET_KEY=your_chapa_secret_key
 
 # Celery Configuration
-CELERY_BROKER_URL=redis://redis:6379/0
-CELERY_RESULT_BACKEND=redis://redis:6379/0
+CELERY_BROKER_URL=redis://redis:6380/0
+CELERY_RESULT_BACKEND=redis://redis:6380/0
 
 # Email Configuration (Gmail example)
 EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
-EMAIL_HOST='smtp.gmail.com'
+EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
-EMAIL_HOST_USER=
-EMAIL_HOST_PASSWORD=
-DEFAULT_FROM_EMAIL=
+EMAIL_HOST_USER=your_email@gmail.com
+EMAIL_HOST_PASSWORD=your_app_password
+DEFAULT_FROM_EMAIL=noreply@example.com
+
+# Frontend URL for password reset links
+FRONTEND_URL=https://example.com
