--- a/ecommerce/docker-compose.yaml
+++ b/ecommerce/docker-compose.yaml
@@ -78,10 +78,12 @@ services:
   redis:
     image: redis:7-alpine
     ports:
-      - "${REDIS_PORT:-6379}:6379"
+      - "${REDIS_HOST_PORT:-6380}:${REDIS_PORT:-6379}" # Use REDIS_HOST_PORT for the host
     command: redis-server --appendonly yes
     volumes:
       - redis_data:/data
+    environment:
+      REDIS_PORT: ${REDIS_PORT:-6379} # Internal Redis port
 
 volumes:
   db_data: {}
