--- a/ecommerce/docker-compose.yaml
+++ b/ecommerce/docker-compose.yaml
@@ -15,7 +15,7 @@ services:
       PORT: ${POSTGRES_PORT:-5432}
       REDIS_URL: redis://redis:${REDIS_PORT:-6379}/0
     ports:
-      - "${DJANGO_PORT:-8000}:8000"
+      - "${DJANGO_HOST_PORT:-8010}:8000"
     depends_on:
       db:
         condition: service_healthy
@@ -25,7 +25,7 @@ services:
       test:
         [
           "CMD-SHELL",
-          "curl -f http://localhost:${DJANGO_PORT:-8000}/ || exit 1",
+          "curl -f http://localhost:${DJANGO_HOST_PORT:-8010}/ || exit 1",
         ]
       interval: 30s
       timeout: 5s
