--- a/ecommerce/env.example
+++ b/ecommerce/env.example
@@ -3,15 +3,18 @@ DJANGO_SECRET_KEY=your_secret_key_here
 DEBUG=False
 SSH_HOST=your_server_hostname
 ALLOWED_HOSTS=example.com,www.example.com
-DJANGO_PORT=8010
-REDIS_PORT=6380
+DJANGO_PORT=8000
+DJANGO_HOST_PORT=8010
+REDIS_PORT=6379
+REDIS_HOST_PORT=6380
 
 # Database Configuration
 POSTGRES_USER=your_db_user
 POSTGRES_PASSWORD=your_db_password
 POSTGRES_DB=ecommerce_db
 POSTGRES_HOST=db
-POSTGRES_PORT=5434
+POSTGRES_PORT=5432
+POSTGRES_HOST_PORT=5434
 
 # CORS Configuration
 CORS_ALLOW_ALL_ORIGINS=False
