--- a/ecommerce/Dockerfile
+++ b/ecommerce/Dockerfile
@@ -43,9 +43,9 @@ USER appuser
 
 EXPOSE 8000
 
-# Healthcheck (adjust the URL if needed)
+# Healthcheck (uses internal container port 8000)
 HEALTHCHECK --interval=30s --timeout=5s --start-period=30s --retries=3 \
-  CMD curl -f http://localhost:${DJANGO_PORT}/ || exit 1
+  CMD curl -f http://localhost:8000/ || exit 1
 
 # Set the entrypoint to the docker-entrypoint.sh script
 ENTRYPOINT ["/app/docker-entrypoint.sh"]
