Get the SECURE_PROXY_SSL_HEADER and USE_X_FORWARDED_HOST01 behind proxy to prevent spoofing

--- a/ecommerce/env.example
+++ b/ecommerce/env.example
@@ -8,6 +8,13 @@ DJANGO_HOST_PORT=8010
 REDIS_PORT=6379
 REDIS_HOST_PORT=6380
 
+# Reverse Proxy Configuration
+# Set to True ONLY when running behind a reverse proxy (e.g., Nginx) that:
+# 1. Sets X-Forwarded-Proto and X-Forwarded-Host headers
+# 2. Strips/sanitizes these headers from incoming client requests
+# WARNING: Setting True without a trusted proxy is a security risk
+BEHIND_PROXY=False
+
 # Database Configuration
 POSTGRES_USER=your_db_user
 POSTGRES_PASSWORD=your_db_password
