add localhost to allowed host for testing

--- a/ecommerce/env.example
+++ b/ecommerce/env.example
@@ -15,6 +15,11 @@ REDIS_HOST_PORT=6380
 # WARNING: Setting True without a trusted proxy is a security risk
 BEHIND_PROXY=False
 
+# Static Files Configuration
+# Enable manifest storage for cache busting (appends hashes to filenames)
+# Set to False if you encounter 500 errors on pages using static files
+USE_MANIFEST_STORAGE=False
+
 # Database Configuration
 POSTGRES_USER=your_db_user
 POSTGRES_PASSWORD=your_db_password
