Add LOAD_COUNTRIES env var to control reference data loading

--- a/ecommerce/env.example
+++ b/ecommerce/env.example
@@ -8,6 +8,11 @@ DJANGO_HOST_PORT=8010
 REDIS_PORT=6379
 REDIS_HOST_PORT=6380
 
+# Reference Data Loading
+# Set to true for first deployment or when updating country data
+# The command is idempotent - safe to run multiple times
+LOAD_COUNTRIES=false
+
 # Reverse Proxy Configuration
 # Set to True ONLY when running behind a reverse proxy (e.g., Nginx) that:
 # 1. Sets X-Forwarded-Proto and X-Forwarded-Host headers
